// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create transfer action should create a finalize transfer request if content is provided 1`] = `
Object {
  "expires_at": Object {},
  "files": Array [
    Object {
      "id": "random-hash",
      "multipart": undefined,
      "name": "kittie.gif",
      "size": 1024,
      "type": "file",
    },
  ],
  "id": "random-hash",
  "message": "Little kittens",
  "state": "uploading",
}
`;

exports[`Create transfer action should create an upload file request if content is provided 1`] = `
RemoteTransfer {
  "expires_at": 2018-01-01T00:00:00.000Z,
  "files": Array [
    Object {
      "id": "random-hash",
      "multipart": undefined,
      "name": "kittie.gif",
      "size": 1024,
      "type": "file",
    },
  ],
  "id": "random-hash",
  "message": "Little kittens",
  "state": "uploading",
}
`;

exports[`Create transfer action should return a RemoteTransfer object 1`] = `
RemoteTransfer {
  "expires_at": 2018-01-01T00:00:00.000Z,
  "files": Array [
    Object {
      "id": "random-hash",
      "multipart": undefined,
      "name": "kittie.gif",
      "size": 1024,
      "type": "file",
    },
  ],
  "id": "random-hash",
  "message": "Little kittens",
  "state": "uploading",
}
`;
